manifests/argocd/argocd-server-ingress_Ingress_argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    kubernetes.io/tls-acme: 'true'
  name: argocd-server-ingress
spec:
  rules:
  - host: argo.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - argo.ocf.berkeley.edu
    secretName: argocd-server-ingress-tls
